--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "photo gallery built with mdbootstrap",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --colors --config webpack.config.js",
+    "build": "node_modules/.bin/cross-env NODE_ENV=production UV_THREADPOOL_SIZE=100 webpack --config webpack.config.js",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,42 @@
   "bugs": {
     "url": "https://github.com/ejhoovler/leelees-wreaths/issues"
   },
-  "homepage": "https://github.com/ejhoovler/leelees-wreaths#readme"
+  "homepage": "https://github.com/ejhoovler/leelees-wreaths#readme",
+  "engines": {
+    "node": ">=4.3.0",
+    "npm": ">=4.0.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.3",
+    "mdbootstrap": "^4.19.1",
+    "react": "^17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^17.0.1",
+    "react-toolbox": "^2.0.0-beta.13"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-each": "^0.10.0",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-mixins": "^7.0.1",
+    "react-hot-loader": "^4.13.0",
+    "redux-devtools-extension": "^2.13.8",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.3.2",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
