--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "mdbootstrap": "^4.19.1",
-    "react": "^17.0.1",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^17.0.1",
-    "react-toolbox": "^2.0.0-beta.13"
+    "react-addons-css-transition-group": "^15.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
@@ -50,6 +49,7 @@
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
     "webpack": "^5.3.2",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
