--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "leelees-wreaths",
   "version": "1.0.0",
   "description": "photo gallery built with mdbootstrap and BE theme",
-  "main": "index.js",
+  "main": "./build/image-gallery.js",
   "scripts": {
-    "start": "node_modules/.bin/cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --colors --config webpack.config.js",
-    "build": "node_modules/.bin/cross-env NODE_ENV=production UV_THREADPOOL_SIZE=100 webpack --config webpack.config.js",
-    "deploy": "gh-pages -d build"
+    "start": "gulp dev",
+    "build": "gulp build",
+    "lint": "eslint --ext .js,.jsx src"
   },
   "repository": {
     "type": "git",
@@ -15,41 +15,37 @@
   "author": "ejhoovler",
   "license": "MIT",
   "homepage": "https://github.com/ejhoovler/leelees-wreaths#readme",
-  "engines": {
-    "node": ">=4.3.0",
-    "npm": ">=4.0.1"
-  },
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "mdbootstrap": "^4.19.1",
-    "react-addons-css-transition-group": "^15.6.2"
+    "bootstrap": "^4.6.0",
+    "clsx": "^1.1.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
+    "mdbootstrap": "^4.19.2",
+    "prop-types": "^15.7.2",
+    "react-swipeable": "^6.0.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "watchify": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-transform-node-env-inline": "^0.4.3",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "eslint": "^7.19.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-each": "^0.10.0",
-    "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
-    "postcss-mixins": "^7.0.1",
-    "react-hot-loader": "^4.13.0",
-    "redux-devtools-extension": "^2.13.8",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
