--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 node_modules
-.sass-cache
 npm-debug.log
-coverage
-build.zip
-build
+.DS_Store
+
+.idea
+
+build/
+example/example.js
+example/example.js.map
+demo/
+styles/css/
